# ab_prefs_rating

./: .gitignore  README.md  pyproject.toml  requirements.txt
ab_prefs_demo/: COLAB.md  README.md  USAGE.md  __init__.py  audio_clips.py  colab_setup.py  create_session.py  interface_notebook.py  launch.py  matching.py  notebook_quickstart.py  rate.ipynb  rate_colab.ipynb  run_demo.py  sampling.py  scoring.py  session_manifest.py  storage_json.py  summarize_preferences.py  unit_cache.py
ab_prefs_interface/: COLAB.md  INPUT_SCHEMA.md  README.md  USAGE.md  __init__.py  asr_wer.py  audio_clips.py  colab_setup.py  create_session.py  data_model.py  dimension_ui.py  interface_colab.py  interface_notebook.py  launch.py  matching.py  notebook_quickstart.py  rate.ipynb  rate_colab.ipynb  run_demo.py  run_rating.py  sampling.py  scoring.py  session_config.py  session_manifest.py  simulate_preferences.py  storage_json.py  summarize_preferences.py  unit_cache.py
configs/: ab_prefs.manifest.json  ab_prefs.manifest.multi_dimension.json  ab_prefs.manifest.multi_dimension.v2.json  ab_prefs.manifest.multi_dimension.v3.json  ab_prefs.providers.json  ab_prefs.session.example.json  ab_prefs.session.json  ab_prefs.session.multi_dimension.json  ab_prefs.session.multi_dimension.v2.json  ab_prefs.session.multi_dimension.v3.json  ab_prefs_demo.providers.colab.json  ab_prefs_demo.providers.example.json  ab_prefs_demo.session.example.json
